Anonymous | Login | 2021-01-17 17:48 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031976 | Open CASCADE | [OCCT] OCCT:Foundation Classes | public | 2020-12-04 08:49 | 2020-12-05 13:01 | ||||||||
Reporter | emv | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.5.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031976: Foundation Classes, BVH_IndexedBoxSet - access members of base class via this pointer | ||||||||||||
Description | Compilation errors on VS2019 when using BVH_IndexedBoxSet. | ||||||||||||
Steps To Reproduce | test lowalgos bvh bug30655_1 | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not required | ||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0097296) git (administrator) 2020-12-04 08:53 |
Branch CR31976 has been created by emv. SHA-1: 0879ea81049825a718a24033d346c25eb981c17f Detailed log of new commits: Author: emv Date: Fri Dec 4 08:52:23 2020 +0300 0031976: Foundation Classes, BVH_IndexedBoxSet - access members of base class via this pointer |
(0097299) git (administrator) 2020-12-04 10:04 |
Branch CR31976 has been updated forcibly by emv. SHA-1: 5db42ef6fd14cba88c46550529fab3222baeb5ed |
(0097315) emv (developer) 2020-12-04 12:47 |
Dear Mikhail, could you please review the git branch CR31976? Test results - http://jenkins-test-12.nnov.opencascade.com/view/CR31976-master-emv/view/COMPARE/ [^] |
(0097317) kgv (developer) 2020-12-04 13:22 |
Eugeny, I suppose that changed line in QABugs_BVH.cxx triggers this compilation error in OCCT itself (e.g. now this scenario will be tested)? |
(0097318) emv (developer) 2020-12-04 13:27 |
You're right, just including the BVH_IndexedBoxSet triggers the compilation error. But I've decided to use this BVH set to avoid useless includes. |
(0097320) msv (developer) 2020-12-04 14:40 |
For integration: occt - CR31976 products - none |
(0097351) bugmaster (administrator) 2020-12-05 11:58 |
Combination - OCCT branch : IR-2020-12-04 master SHA - 1e08a76f1e872a1f38931a6c3e8cf71396fc1209 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-12-04 SHA - cb56638fb6b31df41b28133f69a1dc202dcb56aa was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18090.67999999998 / 18052.040000000085 [+0.21%] Products Total CPU difference: 12342.950000000128 / 12326.850000000131 [+0.13%] Windows-64-VC14: OCCT Total CPU difference: 19751.5 / 19705.828125 [+0.23%] Products Total CPU difference: 13772.515625 / 13793.796875 [-0.15%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0097355) git (administrator) 2020-12-05 13:01 |
Branch CR31976 has been deleted by inv. SHA-1: 5db42ef6fd14cba88c46550529fab3222baeb5ed |
![]() |
|||
occt: master 1aa38057
Timestamp: 2020-12-04 05:52:23 Author: emv Committer: bugmaster [ Details ] [ Diff ] |
0031976: Foundation Classes, BVH_IndexedBoxSet - access members of base class via this pointer | ||
mod - src/BVH/BVH_IndexedBoxSet.hxx | [ Diff ] [ File ] | ||
mod - src/QABugs/QABugs_BVH.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-12-04 08:49 | emv | New Issue | |
2020-12-04 08:49 | emv | Assigned To | => abv |
2020-12-04 08:49 | emv | Assigned To | abv => emv |
2020-12-04 08:49 | emv | Status | new => assigned |
2020-12-04 08:53 | git | Note Added: 0097296 | |
2020-12-04 10:04 | git | Note Added: 0097299 | |
2020-12-04 12:47 | emv | Note Added: 0097315 | |
2020-12-04 12:47 | emv | Assigned To | emv => msv |
2020-12-04 12:47 | emv | Status | assigned => resolved |
2020-12-04 13:22 | kgv | Note Added: 0097317 | |
2020-12-04 13:27 | emv | Note Added: 0097318 | |
2020-12-04 14:40 | msv | Note Added: 0097320 | |
2020-12-04 14:40 | msv | Assigned To | msv => bugmaster |
2020-12-04 14:40 | msv | Status | resolved => reviewed |
2020-12-05 11:58 | bugmaster | Note Added: 0097351 | |
2020-12-05 11:58 | bugmaster | Status | reviewed => tested |
2020-12-05 12:12 | bugmaster | Test case number | => Not required |
2020-12-05 12:15 | bugmaster | Changeset attached | => occt master 1aa38057 |
2020-12-05 12:15 | bugmaster | Status | tested => verified |
2020-12-05 12:15 | bugmaster | Resolution | open => fixed |
2020-12-05 13:01 | git | Note Added: 0097355 |
Copyright © 2000 - 2021 MantisBT Team |