0031976: Foundation Classes, BVH_IndexedBoxSet - access members of base class via this pointer